[gd_scene load_steps=64 format=3 uid="uid://i8arl7nwgjwb"]

[ext_resource type="Script" path="res://Scripts/rpg_player.gd" id="1_0ljyf"]
[ext_resource type="AudioStream" uid="uid://kf6l3uhol5hl" path="res://Assets/Sounds/RPG/SwooshSound.wav" id="2_1typ8"]
[ext_resource type="AudioStream" uid="uid://dlt3fkmqka5nd" path="res://Assets/Sounds/RPG/WooshDash.wav" id="2_7oic1"]
[ext_resource type="Texture2D" uid="uid://dfa62e7324qu6" path="res://Assets/Sprites/RPG/RPG_PlayerDamaged.png" id="2_brtx1"]
[ext_resource type="Texture2D" uid="uid://cgrdasfxlvjhd" path="res://Assets/Sprites/RPG/RPG_PlayerRoll.png" id="3_1rpwv"]
[ext_resource type="Texture2D" uid="uid://b3potd5e5opq4" path="res://Assets/Sprites/RPG/RPG_PlayerDead.png" id="3_dqpl6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j0fh3"]
size = Vector2(32, 42)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_eye1q"]
load_path = "res://.godot/imported/RPG_PlayerSpriteSheet.png-a7a5c8ffb9b3b706148f1f9cda457b5e.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_4s811"]
atlas = SubResource("CompressedTexture2D_eye1q")
region = Rect2(160, 384, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xh33"]
atlas = SubResource("CompressedTexture2D_eye1q")
region = Rect2(0, 384, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5s1j"]
atlas = SubResource("CompressedTexture2D_eye1q")
region = Rect2(80, 384, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jatc"]
atlas = SubResource("CompressedTexture2D_eye1q")
region = Rect2(160, 384, 80, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_mw8b3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4s811")
}],
"loop": true,
"name": &"PREVENT SHIT UP",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xh33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xh33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xh33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xh33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xh33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xh33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5s1j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jatc")
}],
"loop": false,
"name": &"default",
"speed": 25.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_atrhx"]
atlas = SubResource("CompressedTexture2D_eye1q")
region = Rect2(0, 256, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3203"]
atlas = SubResource("CompressedTexture2D_eye1q")
region = Rect2(80, 256, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvg80"]
atlas = SubResource("CompressedTexture2D_eye1q")
region = Rect2(160, 256, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oy7pb"]
atlas = SubResource("CompressedTexture2D_eye1q")
region = Rect2(0, 320, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3poj"]
atlas = SubResource("CompressedTexture2D_eye1q")
region = Rect2(80, 320, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rtjoy"]
atlas = SubResource("CompressedTexture2D_eye1q")
region = Rect2(160, 320, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6a1v"]
atlas = ExtResource("2_brtx1")
region = Rect2(0, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p828c"]
atlas = ExtResource("2_brtx1")
region = Rect2(80, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0t67"]
atlas = ExtResource("2_brtx1")
region = Rect2(160, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nemid"]
atlas = SubResource("CompressedTexture2D_eye1q")
region = Rect2(0, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tgmw5"]
atlas = SubResource("CompressedTexture2D_eye1q")
region = Rect2(160, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4p32"]
atlas = SubResource("CompressedTexture2D_eye1q")
region = Rect2(240, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1sdwr"]
atlas = SubResource("CompressedTexture2D_eye1q")
region = Rect2(320, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c16ep"]
atlas = SubResource("CompressedTexture2D_eye1q")
region = Rect2(400, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_33hjj"]
atlas = SubResource("CompressedTexture2D_eye1q")
region = Rect2(0, 64, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_amv5m"]
atlas = SubResource("CompressedTexture2D_eye1q")
region = Rect2(80, 64, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0oo0m"]
atlas = SubResource("CompressedTexture2D_eye1q")
region = Rect2(160, 64, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pe6k2"]
atlas = SubResource("CompressedTexture2D_eye1q")
region = Rect2(240, 64, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0cib4"]
atlas = SubResource("CompressedTexture2D_eye1q")
region = Rect2(320, 64, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lk5le"]
atlas = SubResource("CompressedTexture2D_eye1q")
region = Rect2(400, 64, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pcavu"]
atlas = ExtResource("3_1rpwv")
region = Rect2(0, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rei2e"]
atlas = ExtResource("3_1rpwv")
region = Rect2(80, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q86ia"]
atlas = ExtResource("3_1rpwv")
region = Rect2(160, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jw6dl"]
atlas = ExtResource("3_1rpwv")
region = Rect2(240, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngxva"]
atlas = ExtResource("3_1rpwv")
region = Rect2(320, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hexc3"]
atlas = ExtResource("3_1rpwv")
region = Rect2(400, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1d26m"]
atlas = ExtResource("3_1rpwv")
region = Rect2(480, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jadb5"]
atlas = ExtResource("3_1rpwv")
region = Rect2(560, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wahqd"]
atlas = ExtResource("3_1rpwv")
region = Rect2(640, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qcpx"]
atlas = SubResource("CompressedTexture2D_eye1q")
region = Rect2(0, 128, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofony"]
atlas = SubResource("CompressedTexture2D_eye1q")
region = Rect2(80, 128, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xeuq1"]
atlas = SubResource("CompressedTexture2D_eye1q")
region = Rect2(160, 128, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gr324"]
atlas = SubResource("CompressedTexture2D_eye1q")
region = Rect2(240, 128, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ya38j"]
atlas = SubResource("CompressedTexture2D_eye1q")
region = Rect2(320, 128, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbsnp"]
atlas = SubResource("CompressedTexture2D_eye1q")
region = Rect2(400, 128, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jknc2"]
atlas = SubResource("CompressedTexture2D_eye1q")
region = Rect2(480, 128, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pftga"]
atlas = SubResource("CompressedTexture2D_eye1q")
region = Rect2(560, 128, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gt1bk"]
atlas = SubResource("CompressedTexture2D_eye1q")
region = Rect2(0, 192, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_plyrn"]
atlas = SubResource("CompressedTexture2D_eye1q")
region = Rect2(80, 192, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uojwv"]
atlas = SubResource("CompressedTexture2D_eye1q")
region = Rect2(160, 192, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jbem"]
atlas = SubResource("CompressedTexture2D_eye1q")
region = Rect2(240, 192, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6uvtm"]
atlas = SubResource("CompressedTexture2D_eye1q")
region = Rect2(320, 192, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5o34"]
atlas = SubResource("CompressedTexture2D_eye1q")
region = Rect2(400, 192, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0jpu"]
atlas = SubResource("CompressedTexture2D_eye1q")
region = Rect2(480, 192, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vbeso"]
atlas = SubResource("CompressedTexture2D_eye1q")
region = Rect2(560, 192, 80, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_4l664"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_atrhx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_atrhx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3203")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvg80")
}],
"loop": false,
"name": &"AttackDown",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oy7pb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oy7pb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3poj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rtjoy")
}],
"loop": false,
"name": &"AttackUp",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6a1v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p828c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0t67")
}],
"loop": false,
"name": &"Damaged",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_dqpl6")
}],
"loop": true,
"name": &"Die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nemid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tgmw5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4p32")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1sdwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c16ep")
}],
"loop": true,
"name": &"IdleDown",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_33hjj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_amv5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0oo0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pe6k2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0cib4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lk5le")
}],
"loop": true,
"name": &"IdleUp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pcavu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rei2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q86ia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jw6dl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ngxva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hexc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1d26m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jadb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wahqd")
}],
"loop": false,
"name": &"Roll",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qcpx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofony")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xeuq1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gr324")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ya38j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbsnp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jknc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pftga")
}],
"loop": true,
"name": &"RunDown",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gt1bk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_plyrn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uojwv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jbem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6uvtm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5o34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0jpu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbeso")
}],
"loop": true,
"name": &"RunUp",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8mi66"]
size = Vector2(24, 11)

[sub_resource type="Animation" id="Animation_a5p2r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-3, -16)]
}

[sub_resource type="Animation" id="Animation_cbq4w"]
resource_name = "Start"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 1),
"transitions": PackedFloat32Array(2.07053, 0.112656),
"update": 0,
"values": [Vector2(-3, -300), Vector2(-3, -16)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xlsxf"]
_data = {
"RESET": SubResource("Animation_a5p2r"),
"Start": SubResource("Animation_cbq4w")
}

[node name="RPGPlayer" type="CharacterBody2D"]
collision_layer = 524801
collision_mask = 524801
script = ExtResource("1_0ljyf")

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(0, -4)
collision_layer = 16777472
collision_mask = 16777472
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(25, 0)
shape = SubResource("RectangleShape2D_j0fh3")

[node name="SwooshSprite" type="AnimatedSprite2D" parent="AttackArea"]
position = Vector2(0, -5)
sprite_frames = SubResource("SpriteFrames_mw8b3")
autoplay = "PREVENT SHIT UP"
frame = 7
frame_progress = 1.0

[node name="AttackAudio" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-3, -16)
stream = ExtResource("2_1typ8")
bus = &"SoundEffects"

[node name="DashAudio" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-3, -16)
stream = ExtResource("2_7oic1")
volume_db = -0.2
bus = &"SoundEffects"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
position = Vector2(-3, -16)
sprite_frames = SubResource("SpriteFrames_4l664")
animation = &"Roll"
autoplay = "Roll"
frame = 8
frame_progress = 1.0

[node name="RollCooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.1

[node name="AttackAfterTime" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="StunTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_8mi66")

[node name="FallAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xlsxf")
}
autoplay = "Start"

[node name="StartFallTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="RestartAfterTime" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="InvulnerabilityTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="timeout" from="RollCooldown" to="." method="_on_roll_cooldown_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="AttackAfterTime" to="." method="_on_attack_after_time_timeout"]
[connection signal="timeout" from="StunTimer" to="." method="_on_stun_timer_timeout"]
[connection signal="timeout" from="StartFallTimer" to="." method="_on_start_fall_timer_timeout"]
[connection signal="timeout" from="RestartAfterTime" to="." method="_on_restart_after_time_timeout"]
[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_invulnerability_timer_timeout"]
